--- a/index.html
+++ b/index.html
@@ -34,23 +34,17 @@ limitations under the License.
   <meta name="twitter:image:width" content="560">
   <meta name="twitter:image:height" content="295">
 
-  <meta name="author" content="Daniel Smilkov and Shan Carter">
-  <title>A Neural Network Playground</title>
+  <meta name="author" content="Daniela Joaquin">
+  <title>An Instant Neural Network Visualizer</title>
   <link rel="stylesheet" href="bundle.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons" rel="stylesheet" type="text/css">
   <script src="lib.js"></script>
 </head>
 <body>
   <!-- GitHub link -->
-  <a class="github-link" href="https://github.com/tensorflow/playground" title="Source on GitHub" target="_blank">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 60.5 60.5" width="60" height="60">
-      <polygon class="bg" points="60.5,60.5 0,0 60.5,0 "/>
-      <path class="icon" d="M43.1,5.8c-6.6,0-12,5.4-12,12c0,5.3,3.4,9.8,8.2,11.4c0.6,0.1,0.8-0.3,0.8-0.6c0-0.3,0-1,0-2c-3.3,0.7-4-1.6-4-1.6c-0.5-1.4-1.3-1.8-1.3-1.8c-1.1-0.7,0.1-0.7,0.1-0.7c1.2,0.1,1.8,1.2,1.8,1.2c1.1,1.8,2.8,1.3,3.5,1c0.1-0.8,0.4-1.3,0.8-1.6c-2.7-0.3-5.5-1.3-5.5-5.9c0-1.3,0.5-2.4,1.2-3.2c-0.1-0.3-0.5-1.5,0.1-3.2c0,0,1-0.3,3.3,1.2c1-0.3,2-0.4,3-0.4c1,0,2,0.1,3,0.4c2.3-1.6,3.3-1.2,3.3-1.2c0.7,1.7,0.2,2.9,0.1,3.2c0.8,0.8,1.2,1.9,1.2,3.2c0,4.6-2.8,5.6-5.5,5.9c0.4,0.4,0.8,1.1,0.8,2.2c0,1.6,0,2.9,0,3.3c0,0.3,0.2,0.7,0.8,0.6c4.8-1.6,8.2-6.1,8.2-11.4C55.1,11.2,49.7,5.8,43.1,5.8z"/>
-    </svg>
-  </a>
   <!-- Header -->
   <header>
-    <h1 class="l--page">Tinker With a <b>Neural Network</b> <span class="optional">Right Here </span>in Your Browser.<br>Don’t Worry, You Can’t Break It. We Promise.</h1>
+    <h1 class="l--page"><b>InstaNueNet:</b> Design, Train, and Visualize Neural Networks.</h1>
   </header>
 
   <!-- Top Controls -->
@@ -69,11 +63,15 @@ limitations under the License.
         </button>
       </div>
       <div class="control">
-        <span class="label">Epoch</span>
+        <span class="label">Epoch
+            <i class="material-icons tooltip-icon" data-tooltip="An epoch is one full cycle through the entire training dataset.">help_outline</i>
+        </span>
         <span class="value" id="iter-number"></span>
       </div>
       <div class="control ui-learningRate">
-        <label for="learningRate">Learning rate</label>
+        <label for="learningRate">Learning rate
+            <i class="material-icons tooltip-icon" data-tooltip="Controls how much to change the model in response to the estimated error each time the model weights are updated.">help_outline</i>
+        </label>
         <div class="select">
           <select id="learningRate">
             <option value="0.00001">0.00001</option>
@@ -91,7 +89,9 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-activation">
-        <label for="activations">Activation</label>
+        <label for="activations">Activation
+            <i class="material-icons tooltip-icon" data-tooltip="The activation function of a node defines the output of that node given a set of inputs.">help_outline</i>
+        </label>
         <div class="select">
           <select id="activations">
             <option value="relu">ReLU</option>
@@ -102,7 +102,9 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-regularization">
-        <label for="regularizations">Regularization</label>
+        <label for="regularizations">Regularization
+            <i class="material-icons tooltip-icon" data-tooltip="A technique used to prevent overfitting by adding a penalty to the loss function.">help_outline</i>
+        </label>
         <div class="select">
           <select id="regularizations">
             <option value="none">None</option>
@@ -112,7 +114,9 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-regularizationRate">
-        <label for="regularRate">Regularization rate</label>
+        <label for="regularRate">Regularization rate
+            <i class="material-icons tooltip-icon" data-tooltip="Determines how much you want to penalize the more complex models.">help_outline</i>
+        </label>
         <div class="select">
           <select id="regularRate">
             <option value="0">0</option>
@@ -129,7 +133,9 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-problem">
-        <label for="problem">Problem type</label>
+        <label for="problem">Problem type
+            <i class="material-icons tooltip-icon" data-tooltip="Classification is used for predicting a discrete class. Regression is used for predicting a continuous value.">help_outline</i>
+        </label>
         <div class="select">
           <select id="problem">
             <option value="classification">Classification</option>
@@ -139,7 +145,6 @@ limitations under the License.
       </div>
     </div>
   </div>
-
   <!-- Main Part -->
   <div id="main-part" class="l--page">
 
@@ -311,12 +316,6 @@ limitations under the License.
   </div>
 
   <!-- More -->
-  <div class="more">
-    <!-- <button class="mdl-button mdl-js-button mdl-button--icon"><i class="material-icons">keyboard_arrow_down</i></button> -->
-    <button class="mdl-button mdl-js-button mdl-button--fab">
-      <i class="material-icons">keyboard_arrow_down</i>
-    </button>
-  </div>
   <!-- Article -->
 
   <article id="article-text">
@@ -338,14 +337,6 @@ limitations under the License.
       <p>The data points (represented by small circles) are initially colored orange or blue, which correspond to positive one and negative one.</p>
       <p>In the hidden layers, the lines are colored by the weights of the connections between neurons. Blue shows a positive weight, which means the network is using that output of the neuron as given. An orange line shows that the network is assiging a negative weight.</p>
       <p>In the output layer, the dots are colored orange or blue depending on their original values. The background color shows what the network is predicting for a particular area. The intensity of the color shows how confident that prediction is.</p>
-    </div>
-
-    <div class="l--body">
-      <h2>What Library Are You Using?</h2>
-      <p>We wrote a tiny neural network <a href="https://github.com/tensorflow/playground/blob/master/src/nn.ts">library</a>
-      that meets the demands of this educational visualization. For real-world applications, consider the
-      <a href="https://www.tensorflow.org/">TensorFlow</a> library.
-      </p>
     </div>
 
     <div class="l--body">
