--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ limitations under the License.
     <h1 class="l--page"><b>InstaNueNet:</b> Design, Train, and Visualize Neural Networks.</h1>
   </header>
 
-  <!-- Top Controls -->
+<!-- Top Controls -->
   <div id="top-controls">
     <div class="container l--page">
       <div class="timeline-controls">
@@ -63,14 +63,14 @@ limitations under the License.
         </button>
       </div>
       <div class="control">
-        <span class="label">Epoch
-            <i class="material-icons tooltip-icon" data-tooltip="An epoch is one full cycle through the entire training dataset.">help_outline</i>
+        <span class="label">
+            <i class="material-icons tooltip-icon" data-tooltip="An epoch is one full cycle through the entire training dataset.">help_outline</i>Epoch
         </span>
         <span class="value" id="iter-number"></span>
       </div>
       <div class="control ui-learningRate">
-        <label for="learningRate">Learning rate
-            <i class="material-icons tooltip-icon" data-tooltip="Controls how much to change the model in response to the estimated error each time the model weights are updated.">help_outline</i>
+        <label for="learningRate">
+            <i class="material-icons tooltip-icon" data-tooltip="Controls how much to change the model in response to the estimated error each time the model weights are updated.">help_outline</i>Learning rate
         </label>
         <div class="select">
           <select id="learningRate">
@@ -89,8 +89,8 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-activation">
-        <label for="activations">Activation
-            <i class="material-icons tooltip-icon" data-tooltip="The activation function of a node defines the output of that node given a set of inputs.">help_outline</i>
+        <label for="activations">
+            <i class="material-icons tooltip-icon" data-tooltip="The activation function of a node defines the output of that node given a set of inputs.">help_outline</i>Activation
         </label>
         <div class="select">
           <select id="activations">
@@ -102,8 +102,8 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-regularization">
-        <label for="regularizations">Regularization
-            <i class="material-icons tooltip-icon" data-tooltip="A technique used to prevent overfitting by adding a penalty to the loss function.">help_outline</i>
+        <label for="regularizations">
+            <i class="material-icons tooltip-icon" data-tooltip="A technique used to prevent overfitting by adding a penalty to the loss function.">help_outline</i>Regularization
         </label>
         <div class="select">
           <select id="regularizations">
@@ -114,8 +114,8 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-regularizationRate">
-        <label for="regularRate">Regularization rate
-            <i class="material-icons tooltip-icon" data-tooltip="Determines how much you want to penalize the more complex models.">help_outline</i>
+        <label for="regularRate">
+            <i class="material-icons tooltip-icon" data-tooltip="Determines how much you want to penalize the more complex models.">help_outline</i>Regularization rate
         </label>
         <div class="select">
           <select id="regularRate">
@@ -133,8 +133,8 @@ limitations under the License.
         </div>
       </div>
       <div class="control ui-problem">
-        <label for="problem">Problem type
-            <i class="material-icons tooltip-icon" data-tooltip="Classification is used for predicting a discrete class. Regression is used for predicting a continuous value.">help_outline</i>
+        <label for="problem">
+            <i class="material-icons tooltip-icon" data-tooltip="Classification is used for predicting a discrete class. Regression is used for predicting a continuous value.">help_outline</i>Problem type
         </label>
         <div class="select">
           <select id="problem">
@@ -145,6 +145,7 @@ limitations under the License.
       </div>
     </div>
   </div>
+  
   <!-- Main Part -->
   <div id="main-part" class="l--page">
 
