--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@ limitations under the License.
             <svg width="150" height="30" id="colormap">
               <defs>
                 <linearGradient id="gradient" x1="0%" y1="100%" x2="100%" y2="100%">
-                  <stop offset="0%" stop-color="#f59322" stop-opacity="1"></stop>
+                  <stop offset="0%" stop-color="#E78AC3" stop-opacity="1"></stop>
                   <stop offset="50%" stop-color="#e8eaeb" stop-opacity="1"></stop>
-                  <stop offset="100%" stop-color="#0877bd" stop-opacity="1"></stop>
+                  <stop offset="100%" stop-color="#A6D854" stop-opacity="1"></stop>
                 </linearGradient>
               </defs>
               <g class="core" transform="translate(3, 0)">
@@ -304,6 +304,19 @@ limitations under the License.
               <span class="mdl-checkbox__label label">Discretize output</span>
             </label>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Heatmap Modal -->
+    <div id="heatmap-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Neural Network Visualization</h3>
+          <span class="close">&times;</span>
+        </div>
+        <div class="modal-body">
+          <div id="heatmap-enlarged"></div>
         </div>
       </div>
     </div>
